# assignment_banking_agent

./: .gitignore  Banking_Agent_Architecture.pptx  README.md
Backend/: requirements.txt
Backend/banking_agents/: main.py  pyproject.toml
Backend/banking_agents/agents/domain/: loan_eligibility_rag_agent.py  policy_rag_agent.py
Backend/banking_agents/agents/reusable/: intent_classifier.py  orchestrator.py  task_decomposer.py
Backend/banking_agents/communication/: intent.py  message.py
Backend/banking_agents/config/: guardrails.yaml  intents.yaml  orchestrator.yaml  settings.py
Backend/banking_agents/guardrails/: input_validator.py  output_validator.py  rag_guard.py
Backend/banking_agents/rag/: base_rag.py
Backend/data_ingestion/: ingest_docs.py
Backend/data_ingestion/policy_documents/: 01_Customer_Onboarding_Policy.docx  02_KYC_Policy.docx  03_Customer_Identification_Program.docx  04_Customer_Due_Diligence_Policy.docx  05_Enhanced_Due_Diligence_Policy.docx  06_Account_Closure_Policy.docx  07_Dormant_Inoperative_Account_Policy.docx  08_Nominee_Survivorship_Policy.docx  09_Retail_Credit_Policy.docx  10_Corporate_Lending_Policy.docx  11_MSME_Lending_Policy.docx  12_Home_Loan_Policy.docx  13_Personal_Loan_Policy.docx  14_Credit_Card_Policy.docx  15_Loan_Restructuring_Policy.docx  16_NPA_Management_Policy.docx  17_Collateral_Security_Policy.docx  18_Credit_Risk_Assessment_Policy.docx  19_UPI_Transaction_Policy.docx  22_ATM_Usage_Policy.docx  (+6 more)
Documentation/: architecture_flow.md  aws_architecture_flow.md  project_implementation_guide.md
Frontend/: index.html
