[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banking_agents"
version = "0.1.0"
description = "Modular banking agents backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "pydantic",
    "sentence-transformers",
    "chromadb",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents", "rag", "tools", "context", "communication", "config", "observability"]
